unity (7.0.0-0ubuntu1) UNRELEASED; urgency=low

  * Bumped released version to 7.0.0

 -- Stephen M. Webb <stephen.webb@canonical.com>  Tue, 02 Apr 2013 12:51:28 -0400

unity (6.12.0daily13.04.01-0ubuntu1) raring; urgency=low

  [ Marco Trevisan (Treviño) ]
  * Launcher starts with default size then jumps to configured one on
    login (LP: #1099815)
  * Launcher - Open Trash window prevents Nautilus being launched when a
    user clicks on the Nautilus Launcher icon (LP: #753938)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 3263

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Mon, 01 Apr 2013 04:02:55 +0000

unity (6.12.0daily13.03.29.1-0ubuntu1) raring; urgency=low

  [ Brandon Schaefer ]
  * launcher - drag and drop of gedit text windows leaves launcher in
    drop state (LP: #1121045)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 3260

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 29 Mar 2013 16:26:36 +0000

unity (6.12.0daily13.03.29-0ubuntu1) raring; urgency=low

  [ Marco Trevisan (Treviño) ]
  * Empty trash dialog sometimes dont have the focus (LP: #807808)
  * Launcher - Trash and Storage device icons in the Launcher should be
    illuminated if folder is being viewed in Nautilus (LP: #1063830)

  [ MC Return ]
  * CompWindow::syncPosition () function is deprecated and was removed
    in lp:compiz, r3639 (LP: #1161285)

  [ Ubuntu daily release ]
  * Automatic snapshot from revision 3257

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 29 Mar 2013 07:24:06 +0000

unity (6.12.0daily13.03.25.1-0ubuntu1) raring; urgency=low

  [ Martin Pitt ]
  * Add logind support (ConsoleKit and UPower suspend/resume are being
    deprecated) (LP: #1155021)

  [ Chris Townsend ]
  * Urgent apps need higher glow intensity (LP: #1157866)
  * Launcher: Icon Backlight Mode "Edge Illumination Toggles" broken
    (regression) (LP: #1103742)

  [ Paolo Rotolo ]