@@ -1135,15 +1135,8 @@ void DashView::OnActivateRequest(GVariant* args)
   }
   else if (/* visible_ && */ handled_type == NOT_HANDLED)
   {
-    if (lens_bar_->GetActiveLensId() != id)
-    {
-      lens_bar_->Activate(id);
-    }
-    else
-    {
-      ubus_manager_.SendMessage(UBUS_OVERLAY_CLOSE_REQUEST, NULL,
-                                glib::Source::Priority::HIGH);
-    }
+    ubus_manager_.SendMessage(UBUS_OVERLAY_CLOSE_REQUEST, NULL,
+                              glib::Source::Priority::HIGH);
   }
   else if (/* visible_ && */ handled_type == GOTO_DASH_URI)
   {
