@@ -76,17 +76,7 @@ class DashRevealTests(DashTestCase):
         """Switch to command lens without closing the dash."""
         self.unity.dash.ensure_visible()
         self.unity.dash.reveal_command_lens()
-        self.assertThat(self.unity.dash.visible, Eventually(Equals(True)))
         self.assertThat(self.unity.dash.active_lens, Eventually(Equals('commands.lens')))
-
-    def test_can_go_from_command_lens_to_dash(self):
-        """We must be able to go from the command lens to the dash (home lens)."""
-        self.unity.dash.reveal_command_lens()
-
-        # Since the dash is visible we can't use ensure_visible().
-        self.keybinding("dash/reveal", 0.1)
-        self.assertThat(self.unity.dash.visible, Eventually(Equals(True)))
-        self.assertThat(self.unity.dash.active_lens, Eventually(Equals('home.lens')))
 
     def test_alt_f4_close_dash(self):
         """Dash must close on alt+F4."""
