@@ -1,8 +1,14 @@
 unity (7.0.0-0ubuntu1) UNRELEASED; urgency=low
 
+  * Revert r3266 "Don't close the dash when switching from the command lens 
+    to the home lens.", it's breaking dash closing for individual lens,
+    which also result in a serie of failing tests (lp: #1164915)
+
+  [ Stephen M. Webb ]
   * Bumped released version to 7.0.0
 
- -- Stephen M. Webb <stephen.webb@canonical.com>  Tue, 02 Apr 2013 12:51:28 -0400
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 05 Apr 2013 11:46:59 +0200
 
 unity (6.12.0daily13.04.01-0ubuntu1) raring; urgency=low
 
